style.css
:root {
    --light: white;
    --dark: black;
  }

*{
    color: var(--contrast);
    font-family: monospace;
    
}

.dark-theme {
    --main: var(--dark);
    --contrast: var(--light);
}
  
.light-theme {
    --main: var(--light);
    --contrast: var(--dark);
}


body {
    display: flex;
    flex-direction: column;
    background: var(--main);
    margin: 0;
    font-size: 14pt;
    min-height: 100vh;
}

.wrapper{
    margin-left: auto;
    margin-right: auto;
    flex: 1 0 auto;
}

.footer{
    background-color: var(--contrast);
    color: var(--main);
    font-size: 8pt;
    padding-left: 5px;
    flex-shrink: 0;
}

a {
    color: inherit;
    text-decoration: inherit;
}

.nav-wrapper{
    background-color: var(--main);
    bottom: 0pt;
    padding: 5px;
}

nav{
    position: sticky;
    top: 0;
    background-color: var(--main);
    border: 2px solid var(--contrast);
}

.menu{
    position: sticky;
    display: flex;
    flex-direction: row;
    padding: 10px 10px 10px 10px;
    
}

.menu-item{
    color: var(--contrast);
    cursor: pointer;
}

.menu-item:hover{
    text-decoration: underline;
}

.menu-item.theme-switcher{
    text-decoration: none
}

.current-page{
    text-decoration: underline;
}

.hamburger-icon{
    display: none;
    color: var(--contrast);
    font-size: calc(24pt + 1vw);
    text-align: center;
}

.hamburger-icon:hover{
    cursor: pointer;
}

.hamburger-icon.open{
    text-decoration: underline;
}

h1{
    font-size: calc(48pt);
}

h2{
    font-size: calc(36pt);
}

h3{
    font-size: calc(24pt);
}

h4{
    font-size: calc(14pt);
}

.blog-post{
    list-style: none;
}

.blog-post:hover{
    text-decoration: underline;
}

@media only screen and (max-width : 1199px) {

    a{
        display: block;
        width: 100%;
        margin-left:0;
        margin-right:0;
        padding-left:0;
        padding-right:0;
    }

    .content{
        margin: 50px;
    }

    .nav-wrapper{
        background-color: var(--contrast);
        padding: 5px;
    }

    nav{
        position: sticky;
        font-size: calc(36pt + 1vw);
        background-color: var(--contrast);
    }

    .hamburger-icon{
        display: block;
        color: var(--main);
    }

    .menu{
        flex-direction: column;
        display: none;
    }

    .menu-item{
        color: var(--main);
    }

    .menu.visible{
        display: block;
    }

}

/* Large Devices, Wide Screens */
@media only screen and (min-width : 1200px) {

    nav{
        position: sticky;
        font-size: calc(24pt + 1vw);
    }

    .menu-item{
        font-size: large;
        margin-right: 15px;
    }

    .wrapper{
        width: 800px;
    }

    .menu{
        width: 780px;
    }

    .menu-item.theme-switcher{
        display: inline;
        margin-left: auto;
    }

}

